New version of AI agents integrated